--- a/RepoApp/Base.lproj/Main.storyboard
+++ b/RepoApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zMj-vz-g6l">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,61 +12,58 @@
             <objects>
                 <tableViewController id="Nwc-nR-WYE" customClass="RepoListTableViewController" customModule="RepoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="oi7-oQ-u8x">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="109" id="D0m-Oi-MRd" customClass="RepoCell" customModule="RepoApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="109"/>
+                                <rect key="frame" x="0.0" y="28" width="320" height="109"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="D0m-Oi-MRd" id="knH-Wt-2oA">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="109"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="109"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="BMI-FT-Pw7">
-                                            <rect key="frame" x="16" y="10" width="117" height="89"/>
+                                            <rect key="frame" x="16" y="10" width="288" height="89"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Q0-BI-eWK">
-                                                    <rect key="frame" x="0.0" y="0.0" width="45" height="29.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="54" height="26.5"/>
+                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="22"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17g-7r-Rvx">
-                                                    <rect key="frame" x="0.0" y="33.5" width="65" height="14.5"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="14.5" id="u5J-Tv-cWL"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17g-7r-Rvx">
+                                                    <rect key="frame" x="0.0" y="30.5" width="67" height="17"/>
+                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ust-1O-wHa">
-                                                    <rect key="frame" x="0.0" y="52" width="56" height="13"/>
+                                                    <rect key="frame" x="0.0" y="51.5" width="56" height="13.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="13" id="UaF-6k-lDg"/>
+                                                        <constraint firstAttribute="height" constant="13.5" id="cQm-6L-j3d"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6e2-ST-btN">
-                                                    <rect key="frame" x="0.0" y="69" width="117" height="20"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="6e2-ST-btN">
+                                                    <rect key="frame" x="0.0" y="69" width="99" height="20"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="7Mw-T9-2rs">
                                                             <rect key="frame" x="0.0" y="0.0" width="22" height="20"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Star" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yc-by-nFU">
-                                                            <rect key="frame" x="30" y="0.0" width="23.5" height="20"/>
+                                                            <rect key="frame" x="24" y="0.0" width="23.5" height="20"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tuningfork" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="WCY-ms-T5p">
-                                                            <rect key="frame" x="61.5" y="0.0" width="22" height="20"/>
+                                                            <rect key="frame" x="49.5" y="0.0" width="22" height="20"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fork" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wUE-1B-JJa">
-                                                            <rect key="frame" x="91.5" y="0.0" width="25.5" height="20"/>
+                                                            <rect key="frame" x="73.5" y="0.0" width="25.5" height="20"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -77,9 +74,10 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="BMI-FT-Pw7" firstAttribute="top" secondItem="knH-Wt-2oA" secondAttribute="topMargin" constant="-1" id="TWO-WG-Hg4"/>
-                                        <constraint firstItem="BMI-FT-Pw7" firstAttribute="centerY" secondItem="knH-Wt-2oA" secondAttribute="centerY" id="Xlt-3a-XRi"/>
-                                        <constraint firstItem="BMI-FT-Pw7" firstAttribute="leading" secondItem="knH-Wt-2oA" secondAttribute="leading" constant="16" id="wmB-4M-6Tv"/>
+                                        <constraint firstItem="BMI-FT-Pw7" firstAttribute="top" secondItem="knH-Wt-2oA" secondAttribute="top" constant="10" id="EKM-l2-loO"/>
+                                        <constraint firstAttribute="trailing" secondItem="BMI-FT-Pw7" secondAttribute="trailing" constant="16" id="UAf-aT-OzZ"/>
+                                        <constraint firstItem="BMI-FT-Pw7" firstAttribute="leading" secondItem="knH-Wt-2oA" secondAttribute="leading" constant="16" id="Zm8-j6-7qZ"/>
+                                        <constraint firstAttribute="bottom" secondItem="BMI-FT-Pw7" secondAttribute="bottom" constant="10" id="vxO-UH-32H"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -103,38 +101,37 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mYV-tu-QhC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1781.1594202898552" y="63.616071428571423"/>
+            <point key="canvasLocation" x="1781.1594202898552" y="63.586956521739133"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="JPW-Nt-4QW">
             <objects>
                 <viewController id="IXl-Ug-9Qp" customClass="DetailViewController" customModule="RepoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gaD-iZ-DRT">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EgP-nV-Csr">
-                                <rect key="frame" x="60" y="118" width="255" height="255"/>
+                                <rect key="frame" x="60" y="118" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="EgP-nV-Csr" secondAttribute="height" multiplier="1:1" id="ejh-A9-gBT"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H2w-FK-oda">
-                                <rect key="frame" x="161" y="426" width="53" height="26.5"/>
+                                <rect key="frame" x="133.5" y="371" width="53" height="26.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Yz1-15-s7h">
-                                <rect key="frame" x="177" y="235" width="20" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="License" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vMn-Bc-J3A">
-                                <rect key="frame" x="150.5" y="475" width="74" height="26.5"/>
+                                <rect key="frame" x="123" y="420" width="74" height="27"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Yz1-15-s7h">
+                                <rect key="frame" x="150" y="208" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -144,7 +141,9 @@
                             <constraint firstItem="EgP-nV-Csr" firstAttribute="leading" secondItem="X4B-Wj-KJe" secondAttribute="leading" constant="60" id="DUY-NO-JgN"/>
                             <constraint firstItem="EgP-nV-Csr" firstAttribute="centerX" secondItem="gaD-iZ-DRT" secondAttribute="centerX" id="Foq-rv-uP8"/>
                             <constraint firstItem="vMn-Bc-J3A" firstAttribute="centerX" secondItem="gaD-iZ-DRT" secondAttribute="centerX" id="T9h-Ma-XAQ"/>
+                            <constraint firstItem="Yz1-15-s7h" firstAttribute="centerY" secondItem="EgP-nV-Csr" secondAttribute="centerY" id="a6X-0V-hrY"/>
                             <constraint firstItem="vMn-Bc-J3A" firstAttribute="top" secondItem="H2w-FK-oda" secondAttribute="bottom" constant="22.5" id="bWM-EO-ree"/>
+                            <constraint firstItem="Yz1-15-s7h" firstAttribute="centerX" secondItem="EgP-nV-Csr" secondAttribute="centerX" id="m6m-fc-VGU"/>
                             <constraint firstItem="X4B-Wj-KJe" firstAttribute="trailing" secondItem="EgP-nV-Csr" secondAttribute="trailing" constant="60" id="pHN-CW-aFx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="X4B-Wj-KJe"/>
@@ -167,7 +166,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zMj-vz-g6l" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="blackTranslucent" id="xqU-tX-RRv">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
